# model-viewer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Taskfile.yml
includes/glad/: gl.h
shaders/: default.frag  default.vert
src/: gl.c  main.cpp  shader.cpp  shader.hpp  test.cpp
src/assets/: CMakeLists.txt  mesh.hpp  vertex.hpp
src/math/: CMakeLists.txt  dot.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/math/tests/: CMakeLists.txt  test_dot.cpp  test_vec.cpp
src/platform/: CMakeLists.txt  window.cpp  window.hpp  window_context.cpp  window_context.hpp
src/rendering/: CMakeLists.txt  model.cpp  model.hpp  opengl_context.cpp  opengl_context.hpp  renderer.cpp  renderer.hpp  shader_program.cpp  shader_program.hpp  vertex.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/rendering/internal/: gl_buffer.cpp  gl_buffer.hpp
src/rendering/opengl/: renderer_opengl.cpp  renderer_opengl.hpp  shader.cpp  shader.hpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer.hpp
